--- a/Tienda.html
+++ b/Tienda.html
@@ -32,7 +32,7 @@
                         aria-label="breadcrumb">
                         <ol class="breadcrumb" style="background-color: black;">
                             <li class="breadcrumb-item">
-                                <a href="proyecto.html">Inicio</a>
+                                <a href="index.html">Inicio</a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">Tienda</li>
                         </ol>
