--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
-                        <a class="nav-link" href="proyecto.html">Inicio<span class="sr-only"></span></a>
+                        <a class="nav-link" href="index.html">Inicio<span class="sr-only"></span></a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="historia.html">Historia</a>
