--- a/historia.html
+++ b/historia.html
@@ -17,9 +17,9 @@
         <!-- MENU -->
 
         <div class="container" id="menu">
-            <div class="row">
+            <div class="row" style="align-items: baseline;">
                 <div class="col-sm">
-                    <img src="428-4283134_who-you-got-death-row-records-logo-clipart.png">
+                    <img src="imagenes/428-4283134_who-you-got-death-row-records-logo-clipart.png">
                 </div>
                 <div class="col-sm">
 
