--- a/index.html
+++ b/index.html
@@ -18,31 +18,37 @@
 
         <!-- MENÚ -->
         <div class="container-fluid" id="menu">
-            <img
-                src="death-row-records-logo-F8EFEB43EA-seeklogo.com.png"
-                class="img-fluid"
-                id="logo">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                      <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Inicio<span class="sr-only"></span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="historia.html">Historia</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="Tienda.html">Tienda</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="Contacto.html">Contacto</a>
-                      </li>
-                    </ul>
+                    <div class="row" style="align-items: baseline;">
+                      <div class="col-sm">
+                        <img
+                        src="imagenes/428-4283134_who-you-got-death-row-records-logo-clipart.png"
+                        id="logo">
+                      </div>
+                      <div class="col-sm" style="text-align: left;">
+                        <nav class="navbar navbar-expand-lg ">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                              <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarText">
+                              <ul class="navbar-nav mr-auto">
+                                <li class="nav-item active">
+                                  <a class="nav-link" href="index.html">Inicio<span class="sr-only"></span></a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="historia.html">Historia</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="Tienda.html">Tienda</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="Contacto.html">Contacto</a>
+                                </li>
+                              </ul>
+                            </div>
+                          </nav>
+                      </div>
+                    </div>
                   </div>
-                </nav>
         </div>
         <hr>
 
@@ -52,21 +58,21 @@
 
                 <div class="col-6 col-md-2">
                     <picture>
-                        <a href="2pac.html"><img src="2515.jpg" class="img-fluid img-thumbnail"></a>
+                        <a href="2pac.html"><img src="imagenes/2515.jpg" class="img-fluid img-thumbnail"></a>
                         <p>2pac</p>
                     </picture>
                 </div>
 
                 <div class="col-6 col-md-2">
                     <picture>
-                        <a href="Snoop.html"><img src="snoopp.jpg" class="img-fluid img-thumbnail"></a>
+                        <a href="Snoop.html"><img src="imagenes/snoopp.jpg" class="img-fluid img-thumbnail"></a>
                         <p>Snoop Dogg</p>
                     </picture>
                 </div>
 
                 <div class="col-6 col-md-2">
                     ​<picture>
-                        <a href="nateDogg.html"><img src="300.nate.dogg.lc.031611.jpg" class="img-fluid img-thumbnail"></a>
+                        <a href="nateDogg.html"><img src="imagenes/300.nate.dogg.lc.031611.jpg" class="img-fluid img-thumbnail"></a>
                         <p>Nate Dogg</p>
                     </picture>
                 </div>
@@ -74,7 +80,7 @@
                 <div class="col-6 col-md-2">
                     ​<picture>
                         <a href="dr. dre.html"><img
-                            src="dr_dre_regresa_al_estudio_de_grabacion_tras_salir_del_hospital.jpg_1316216956.webp"
+                            src="imagenes/dr_dre_regresa_al_estudio_de_grabacion_tras_salir_del_hospital.jpg_1316216956.webp"
                             class="img-fluid img-thumbnail"></a>
                         <p>Dr.Dre</p>
                     </picture>
@@ -82,7 +88,7 @@
 
                 <div class="col-6 col-md-2">
                     <picture>
-                        <a href="WarrenG.html"><img src="huge_avatar.jpg" class="img-fluid img-thumbnail"></a>
+                        <a href="WarrenG.html"><img src="imagenes/huge_avatar.jpg" class="img-fluid img-thumbnail"></a>
                         <p>Warren G</p>
                     </picture>
                 </div>
@@ -90,19 +96,21 @@
         </div>
 
         <!-- VIDEO -->
-        <div id="video">
-            <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/0P6ITKK9yeg"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen="allowfullscreen"></iframe>
-        </div>
+        <div class="container-fluid" >
+            <div class="row">
+              <div class="col-sm" id="video" >
+                    <div class="embed-responsive-item embed-responsive-21by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0P6ITKK9yeg" allowfullscreen></iframe>
+                    </div>
+              </div>
+            </div>
+          </div>
+        
+        
 
         <!-- FOOTER -->
         <footer>
-            <img src="images.png" class="img-fluid">
+            <img src="imagenes/images.png" class="img-fluid">
         </footer>
 
         <!-- Optional JavaScript -->
