--- a/Snoop.html
+++ b/Snoop.html
@@ -18,24 +18,36 @@
     <body>
         <!-- MENÚ -->
         <div class="container-fluid" id="menu">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="428-4283134_who-you-got-death-row-records-logo-clipart.png">
-                </div>
-                <div class="col-sm">
-
-                    <h1>Snoop Dogg</h1>
-                </div>
+            <div class="row" style="align-items: baseline;">
+              <div class="col-sm">
+                <img src="imagenes/428-4283134_who-you-got-death-row-records-logo-clipart.png">
+              </div>
+              <div class="col-sm">
+                <h1>Snoop Dogg</h1>
+              </div>
+              <div class="col-sm">
+                <nav
+                        style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z');"
+                        aria-label="breadcrumb">
+                        <ol class="breadcrumb" style="background-color: black;">
+                            <li class="breadcrumb-item">
+                                <a href="index.html">Inicio</a>
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">Snoop Dogg</li>
+                        </ol>
+                    </nav>
+              </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
+          </div>
 
-                <div class="col-sm">
-                    <!-- CARTA -->
+
+        <!-- CARTA -->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm">           
                     <div class="card" style="width: 15rem;">
                         <img
-                            src="220px-Snoop_Dogg_2019_by_Glenn_Francis.webp"
+                            src="imagenes/220px-Snoop_Dogg_2019_by_Glenn_Francis.webp"
                             class="card-img-top"
                             alt="...">
                         <div class="card-body">
@@ -70,11 +82,12 @@
                     </div>
                 </div>
                 <div class="col-sm">
+                </p>
                     Primero en el tema principal del largometraje Deep Cover, y después con criss
                     monstar en el álbum debut en solitario de Dr. Dre, The Chronic, junto con otros
                     miembros de su antiguo grupo, Tha Dogg Pound. La contribución de Snoop en The
                     Chronic fue considerable; su presencia en el disco es notable y preparaba el
-                    terreno para su lanzamiento en solitario. Mientras grababa Doggystyle en agosto
+                    terreno para su lanzamiento en solitario.</p></p> Mientras grababa Doggystyle en agosto
                     de 1993, Snoop Dogg fue arrestado por la muerte de Phillip Woldermarian, un
                     miembro de una banda rival que fue disparado y resultó muerto en una lucha
                     armada entre bandas. Snoop fue defendido por Robert Kardashian, y su
@@ -82,9 +95,9 @@
                     (dueño de Death Row Records), o quizás ambos pagaron los servicios de Cochrane a
                     Lee. Tanto Snoop como Lee fueron absueltos; Lee fue absuelto por legítima
                     defensa. Sin embargo, Snoop permaneció enredado en batallas legales durante
-                    otros tres años. El video del tema "2 Of Amerikaz Most Wanted" de Tupac Shakur
+                    otros tres años.</p></p>El video del tema "2 Of Amerikaz Most Wanted" de Tupac Shakur
                     con Snoop Dogg trata de las dificultades de cada rapero con sus respectivos
-                    procesos criminales, no relacionados pero concurrentes. Doggystyle fue lanzado
+                    procesos criminales, no relacionados pero concurrentes.</p></p>Doggystyle fue lanzado
                     finalmente en noviembre de 1993 por Death Row Records, y se convirtió en el
                     primer álbum de la West Coast en debutar en primer puesto en las listas,
                     promoviendo además el G-Funk de la Costa Oeste. Los sencillos "Who Am I (What's
@@ -95,7 +108,7 @@
                     de la censura de todo el país.
                 </div>
 
-                <div class="col-sm">
+                <div class="col-sm" style="text-align: right;">
                     <!-- SPOTIFY -->
                     <iframe
                         src="https://open.spotify.com/embed/artist/7hJcb9fa4alzcOq3EaNPoG"
@@ -111,7 +124,7 @@
 
         <!-- FOOTER -->
         <footer>
-            <img src="images.png">
+            <img src="imagenes/images.png">
         </footer>
 
         <!-- Optional JavaScript -->
