--- a/2pac.html
+++ b/2pac.html
@@ -7,7 +7,7 @@
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="stylePac.css">
+            <link rel="stylesheet" href="stylePac.css">
         <!-- Bootstrap CSS -->
         <link
             rel="stylesheet"
@@ -18,23 +18,34 @@
     <body>
         <!-- MENÚ -->
         <div class="container-fluid" id="menu">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="428-4283134_who-you-got-death-row-records-logo-clipart.png">
-                </div>
-                <div class="col-sm">
-
-                    <h1>2pac</h1>
-                </div>
+            <div class="row" style="align-items: baseline;">
+              <div class="col-sm">
+                <img src="imagenes/428-4283134_who-you-got-death-row-records-logo-clipart.png">
+              </div>
+              <div class="col-sm">
+                <h1>2pac</h1>
+              </div>
+              <div class="col-sm">
+                <nav
+                        style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z');"
+                        aria-label="breadcrumb">
+                        <ol class="breadcrumb" style="background-color: black;">
+                            <li class="breadcrumb-item">
+                                <a href="index.html">Inicio</a>
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">2pac</li>
+                        </ol>
+                    </nav>
+              </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
+          </div>
 
+            <!-- CARTA -->
+          <div class="container-fluid">
+            <div class="row">
                 <div class="col-sm">
-                    <!-- CARTA -->
                     <div class="card" style="width: 15rem;">
-                        <img src="2pacCarta.jpg" class="card-img-top" alt="...">
+                        <img src="imagenes/2pacCarta.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">2pac</h5>
                             <p class="card-text">Tupac Shakur​ también conocido como 2Pac, Makaveli o
@@ -67,6 +78,7 @@
                     </div>
                 </div>
                 <div class="col-sm">
+                    <p>
                     En enero de 1991, Shakur debutó como rapero a escala nacional bajo el nombre
                     artístico de 2Pac, invitado en el sencillo «Same Song» del grupo de rap Digital
                     Underground; tema que también apareció en la banda sonora de la película Nothing
@@ -74,29 +86,35 @@
                     2Pacalypse Now de noviembre de 1991 y Strictly 4 My N.I.G.G.A.Z... de febrero de
                     1993, precedieron al único álbum homónimo de su grupo secundario, Thug Life,
                     lanzado en septiembre de 1994 con su propia participación. El rapero y productor
-                    Stretch participó en los tres álbumes anteriores de 2Pac. Su tercer álbum
-                    solista, Me Against the World de marzo de 1995, presenta al grupo de raperos
+                    Stretch participó en los tres álbumes anteriores de 2Pac.
+                    </p>
+                    <p>
+                    Su tercer álbum solista, Me Against the World de marzo de 1995, presenta al grupo de raperos
                     Dramacydal, que en el cuarto álbum solista de 2pac se transformará en Outlawz.
                     El cuarto álbum solista y último en vida de 2Pac, All Eyez on Me de febrero de
                     1996, también cuenta, entre sus numerosos invitados, con el miembro de Thug
                     Life, Big Syke. No obstante, otro álbum en solitario ya estaba terminado: The
-                    Don Killuminati: The 7 Day Theory. Lanzado en noviembre de 1996 bajo el nombre
+                    Don Killuminati: The 7 Day Theory. 
+                </p> <p> 
+                    En noviembre de 1996 bajo el nombre
                     artístico de Makaveli, es un álbum de estudio que fue grabado durante una semana
                     en el mes de agosto. Los álbumes póstumos, todos ellos producciones de archivo,
                     son los siguientes: RU Still Down? (1997), Greatest Hits (1998), Still I Rise
                     (1999), Before the End of Time (2001), Better Dayz (2002), Loyal to the Game
                     (2004), Pac's Life (2006)
+                </p>
                 </div>
 
-                <div class="col-sm">
-                    <!-- SPOTIFY -->
+                <div class="col-sm" style="text-align: right;">
+                    
                     <iframe
                         src="https://open.spotify.com/embed/artist/1ZwdS5xdxEREPySFridCfh"
-                        width="300"
-                        height="380"
+                        width="350"
+                        height="400"
                         frameborder="0"
                         allowtransparency="true"
-                        allow="encrypted-media"></iframe>
+                        allow="encrypted-media">
+                    </iframe>
 
                 </div>
             </div>
@@ -104,7 +122,7 @@
 
         <!-- FOOTER -->
         <footer>
-            <img src="images.png">
+            <img src="imagenes/images.png">
         </footer>
 
         <!-- Optional JavaScript -->
