--- a/dr. dre.html
+++ b/dr. dre.html
@@ -18,25 +18,38 @@
     <body>
         <!-- MENÚ -->
         <div class="container-fluid" id="menu">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="428-4283134_who-you-got-death-row-records-logo-clipart.png">
-                </div>
-                <div class="col-sm">
-
-                    <h1>Dr. Dre</h1>
-                </div>
+            <div class="row" style="align-items: baseline;">
+              <div class="col-sm">
+                <img src="imagenes/428-4283134_who-you-got-death-row-records-logo-clipart.png">
+              </div>
+              <div class="col-sm">
+                <h1>Dr. Dre</h1>
+              </div>
+              <div class="col-sm">
+                <nav
+                        style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z');"
+                        aria-label="breadcrumb">
+                        <ol class="breadcrumb" style="background-color: black;">
+                            <li class="breadcrumb-item">
+                                <a href="index.html">Inicio</a>
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">Dr. Dre</li>
+                        </ol>
+                    </nav>
+              </div>
             </div>
         </div>
-        <div class="container">
+        
+         <!-- CARTA -->
+        <div class="container-fluid">
             <div class="row">
 
                 <div class="col-sm">
-                    <!-- CARTA -->
+                   
                     <div class="card" style="width: 18rem;">
-                        <img src="dreCarta.jpg" class="card-img-top" alt="...">
+                        <img src="imagenes/dreCarta.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Dr. Dre</h5>
+                            <h5 class="card-title">Dr.Dre</h5>
                             <p class="card-text">Andre Romelle Young, más conocido por su nombre artístico
                                 Dr. Dre, es un rapero, productor y empresario estadounidense
                             </p>
@@ -63,12 +76,13 @@
                     </div>
                 </div>
                 <div class="col-sm">
+                    <p>
                     Inspirado por la canción de Grandmaster Flash "The Adventures Of Grandmaster
                     Flash On The Wheels Of Steel", Young asistía a menudo a un club llamado The Eve
                     After Dark para ver cómo tocaban los DJs y raperos en directo. Posteriormente se
                     convertiría en DJ del club, inicialmente bajo el nombre "Dr. J", basado en el
-                    apodo de Julius Erving, su jugador de baloncesto favorito. En el club conoció al
-                    aspirante a rapero Antoine Carraby, que más tarde pasaría a ser miembro de
+                    apodo de Julius Erving, su jugador de baloncesto favorito.</p> 
+                    En el club conoció al aspirante a rapero Antoine Carraby, que más tarde pasaría a ser miembro de
                     N.W.A. como DJ Yella. Poco después adoptó el apodo de Dr. Dre, una mezcla de
                     alias anterior el Dr. J y su primer nombre, refiriéndose a sí mismo como el "El
                     Maestro De La Mezclologia". Más tarde se unió al grupo musical World Class
@@ -76,22 +90,23 @@
                     en estrellas de la escena electro que dominó a principios de 1980 en la Costa
                     Oeste. El disco World Class contenía el primer éxito de Young, "Surgery",
                     canción en la que Dr. Dre está presente a los platos.9​ El disco lograría ventas
-                    de 50.000 ejemplares en la zona de Compton. Dr. Dre y DJ Yella también realizan
-                    mezclas para KDAY, una estación local de radio. Durante este tiempo Dr. Dre
+                    de 50.000 ejemplares en la zona de Compton. </p>
+                    <p>Dr. Dre y DJ Yella también realizan mezclas para KDAY, una estación local de radio. Durante este tiempo Dr. Dre
                     grabó varias canciones que luego serían publicadas en 1994 en un disco
                     recopilatorio titulado Croncrete Roots.10​ Después de la secundaria, asistió a
                     Chester Adult School en Compton tras el consejo de su madre. Después de su breve
                     asistencia, se trasladó a la residencia de su padre, casa de sus abuelos
                     originalmente, antes de regresar a la casa de su madre. Más tarde se retiró de
                     Chester para centrarse en llevar a cabo su carrera en The Eve After Dark
+                </p>
                 </div>
 
-                <div class="col-sm">
+                <div class="col-sm" style="text-align: right;">
                     <!-- SPOTIFY -->
                     <iframe
                         src="https://open.spotify.com/embed/artist/6DPYiyq5kWVQS4RGwxzPC7"
-                        width="300"
-                        height="380"
+                        width="350"
+                        height="400"
                         frameborder="0"
                         allowtransparency="true"
                         allow="encrypted-media"></iframe>
@@ -102,7 +117,7 @@
 
         <!-- FOOTER -->
         <footer>
-            <img src="images.png">
+            <img src="imagenes/images.png">
         </footer>
 
         <!-- Optional JavaScript -->
