--- a/nateDogg.html
+++ b/nateDogg.html
@@ -18,22 +18,35 @@
     <body>
         <!-- MENÚ -->
         <div class="container-fluid" id="menu">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="428-4283134_who-you-got-death-row-records-logo-clipart.png">
-                </div>
-                <div class="col-sm">
-                    <h1>Nate Dogg</h1>
-                </div>
+            <div class="row" style="align-items: baseline;">
+              <div class="col-sm">
+                <img src="imagenes/428-4283134_who-you-got-death-row-records-logo-clipart.png">
+              </div>
+              <div class="col-sm">
+                <h1>Nate Dogg</h1>
+              </div>
+              <div class="col-sm">
+                <nav
+                        style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z');"
+                        aria-label="breadcrumb">
+                        <ol class="breadcrumb" style="background-color: black;">
+                            <li class="breadcrumb-item">
+                                <a href="index.html">Inicio</a>
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">Nate Dogg</li>
+                        </ol>
+                    </nav>
+              </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
+          </div>
 
+
+            <!-- CARTA -->
+        <div class="container-fluid">
+            <div class="row">
                 <div class="col-sm">
-                    <!-- CARTA -->
                     <div class="card" style="width: 15rem;">
-                        <img src="e64020c6306c4ee87fbb667dd942b779.jpg" class="card-img-top" alt="...">
+                        <img src="imagenes/e64020c6306c4ee87fbb667dd942b779.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nate Dogg</h5>
                             <p class="card-text">Nathaniel Dwayne Hale, más conocido por su nombre artístico
@@ -62,18 +75,18 @@
                     </div>
                 </div>
                 <div class="col-sm">
-                    En 1991, formó el trío de rap 213, junto a su primo Snoop Dogg y Warren G, un
+                    <p>En 1991, formó el trío de rap 213, junto a su primo Snoop Dogg y Warren G, un
                     amigo de ambos. El primer álbum del grupo no vería la luz hasta 2004, tras la
-                    grabación de The Hard Way. Dogg debutó en el mundo del rap en el álbum de Dr.
+                    grabación de The Hard Way. </p><p> debutó en el mundo del rap en el álbum de Dr.
                     Dre, The Chronic, en 1991. Fue muy bien recibido por los admiradores y críticos
                     igualmente, hasta el hecho de que firmaría por Death Row Records en 1993. En
-                    1994 produjo su primer éxito, Regulate, con Warren G. En 1998, Nate Dogg editó
+                    1994 produjo su primer éxito, Regulate, con Warren G.</p><p> En 1998, Nate Dogg editó
                     su álbum debut bajo el sello Breakaway Records, tras una salida complicada de
                     Death Row Records. El doble álbum fue titulado G-Funk Classics Vol. 1 & 2 y
-                    continuó en 2001 con Music & Me, bajo Elektra Records.
+                    continuó en 2001 con Music & Me, bajo Elektra Records.</p>
                 </div>
 
-                <div class="col-sm">
+                <div class="col-sm" style="text-align: right;">
                     <!-- SPOTIFY -->
                     <iframe
                         src="https://open.spotify.com/embed/artist/1Oa0bMld0A3u5OTYfMzp5h"
@@ -89,7 +102,7 @@
 
         <!-- FOOTER -->
         <footer>
-            <img src="images.png">
+            <img src="imagenes/images.png">
         </footer>
 
         <!-- Optional JavaScript -->
